force-app/main/default/objects/Survey_Issue__c/Survey_Issue__c.object-meta.xml
<CustomObject>
    <label>Survey Issue</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Survey Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>