force-app/main/default/objects/Survey_Issue__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Answer</label>
    <referenceTo>Answer__c</referenceTo>
    <relationshipLabel>Survey Issues</relationshipLabel>
    <relationshipName>Survey_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>