force-app/main/default/objects/Survey_Issue__c/fields/Answer_ID__c.field-meta.xml
<CustomField>
    <fullName>Answer_ID__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Answer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Answer ID</label>
    <type>Text</type>
</CustomField>