force-app/main/default/objects/Survey_Issue__c/fields/AnswerFeedText__c.field-meta.xml
<CustomField>
    <fullName>AnswerFeedText__c</fullName>
    <formula>Answer__r.AnswerFeed__c</formula>
    <label>AnswerFeedText</label>
    <type>Text</type>
</CustomField>