force-app/main/default/objects/Survey_Issue__c/fields/AnswerText__c.field-meta.xml
<CustomField>
    <fullName>AnswerText__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Answer__r.Answer__c</formula>
    <label>AnswerText</label>
    <type>Text</type>
</CustomField>