force-app/main/default/objects/Survey_Issue__c/fields/CommentFeed__c.field-meta.xml
<CustomField>
    <fullName>CommentFeed__c</fullName>
    <description>Outbound Feed Only.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CommentFeed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>