force-app/main/default/objects/Survey_Issue__c/fields/Created_Date_Survey__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Survey__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Survey</label>
    <type>DateTime</type>
</CustomField>