force-app/main/default/objects/Survey_Issue__c/fields/isReviewed__c.field-meta.xml
<CustomField>
    <fullName>isReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for checking if the record is ready to send in feed.</description>
    <label>isReviewed</label>
    <type>Checkbox</type>
</CustomField>