force-app/main/default/objects/Survey_Issue__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Issue</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Survey Issues</relationshipLabel>
    <relationshipName>Survey_Issues</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>