force-app/main/default/objects/Survey_Issue__c/fields/Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Issue_Id__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Issue__r.CaseNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Issue Id</label>
    <type>Text</type>
</CustomField>