force-app/main/default/objects/Survey_Issue__c/fields/PM_Question_ID__c.field-meta.xml
<CustomField>
    <fullName>PM_Question_ID__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Question__r.PMQuestionID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Question ID</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>