force-app/main/default/objects/Survey_Issue__c/fields/Quest_Multi_Answers__c.field-meta.xml
<CustomField>
    <fullName>Quest_Multi_Answers__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Question__r.MultiAnswers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quest Multi Answers</label>
    <type>Text</type>
</CustomField>