force-app/main/default/objects/Survey_Issue__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Survey Issues</relationshipLabel>
    <relationshipName>Survey_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>