force-app/main/default/objects/Survey_Issue__c/fields/Question_ID__c.field-meta.xml
<CustomField>
    <fullName>Question_ID__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Question__r.Name</formula>
    <label>Question ID</label>
    <type>Text</type>
</CustomField>