force-app/main/default/objects/Survey_Issue__c/fields/Question_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Question_Sequence__c</fullName>
    <label>Question Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>