force-app/main/default/objects/Survey_Issue__c/fields/QuestionFeedText__c.field-meta.xml
<CustomField>
    <fullName>QuestionFeedText__c</fullName>
    <formula>Question__r.QuestionFeed__c</formula>
    <label>QuestionFeedText</label>
    <type>Text</type>
</CustomField>