force-app/main/default/objects/Survey_Issue__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Question__r.Question__c</formula>
    <label>QuestionText</label>
    <type>Text</type>
</CustomField>