force-app/main/default/objects/Survey_Issue__c/fields/Survey_Name__c.field-meta.xml
<CustomField>
    <fullName>Survey_Name__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Survey__r.Survey_Name__c</formula>
    <label>Survey Name</label>
    <type>Text</type>
</CustomField>