force-app/main/default/objects/Survey_Issue__c/fields/SurveyID__c.field-meta.xml
<CustomField>
    <fullName>SurveyID__c</fullName>
    <description>Feed Outbound</description>
    <formula>Survey__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SurveyID</label>
    <type>Text</type>
</CustomField>