force-app/main/default/objects/Survey_Issue__c/fields/Transacation_Id__c.field-meta.xml
<CustomField>
    <fullName>Transacation_Id__c</fullName>
    <description>It is only for Issue_Survey_Outbound feed.</description>
    <formula>Transaction__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transacation Id</label>
    <type>Text</type>
</CustomField>