force-app/main/default/objects/Survey_Issue__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction Management</label>
    <referenceTo>Transaction_Management__c</referenceTo>
    <relationshipLabel>Survey Issues</relationshipLabel>
    <relationshipName>Survey_Issues</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>