force-app/main/default/objects/Survey_Issue__c/fields/UpdateFromFeed__c.field-meta.xml
<CustomField>
    <fullName>UpdateFromFeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UpdateFromFeed</label>
    <type>Checkbox</type>
</CustomField>