force-app/main/default/objects/Survey_Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FeedSend__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Survey_Name__c</columns>
    <columns>SurveyID__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>isActive__c</columns>
    <columns>isReviewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue_Id__c</field>
        <operation>equals</operation>
        <value>03285187</value>
    </filters>
    <label>All</label>
</ListView>